feat: Impl AnnotatedObjectRepository